--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@react-email/components": "0.0.14",
     "lucide": "^0.319.0",
     "lucide-react": "^0.319.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-helmet": "^6.1.0",
+    "resend": "^3.1.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
