add the login and admin pages

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI="mongodb+srv://dimer:mitsubishi@cluster0.7xchetv.mongodb.net?retryWrites=true&w=majority"
 NODE_ENV=
+NEXTAUTH_SECRET="RrYF8D+P9FsfAhBrQTp/5LSD+aD0/dlNGvq82PdU3F8="
