--- a/package.json
+++ b/package.json
@@ -11,9 +11,19 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@react-email/components": "0.0.14",
+    "@tanstack/react-table": "^8.12.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -29,6 +39,7 @@
     "react-dom": "^18",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.50.1",
+    "recharts": "^2.12.0",
     "resend": "^3.1.0",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.2.1",
