--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-fast-marquee": "^1.6.4",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.50.1",
     "react-redux": "^9.1.0",
