--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-fast-marquee": "^1.6.4",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.50.1",
+    "react-markdown": "^9.0.1",
     "react-redux": "^9.1.0",
     "recharts": "^2.12.0",
     "resend": "^3.1.0",
