add more features

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGODB_URI="mongodb+srv://dimer:mitsubishi@cluster0.7xchetv.mongodb.net?retryWrites=true&w=majority"
 NODE_ENV=
 NEXTAUTH_SECRET="RrYF8D+P9FsfAhBrQTp/5LSD+aD0/dlNGvq82PdU3F8="
-
+RESEND_API_KEY = "re_Ej6CGQUM_LFtTWVmgRcLTGqTHrm8yMfCZ"
 EDGE_STORE_ACCESS_KEY="CPtoD1To3kGUjtpRS5hoASkmvCN0BEWG"
 EDGE_STORE_SECRET_KEY="G1nDpFduvjWM21ZCCnAqZIO7z5hDtpTH3kj3OfivegUbMxBD"    
