--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "recharts": "^2.12.0",
     "resend": "^3.1.0",
     "sharp": "^0.33.2",
+    "slugify": "^1.6.6",
     "swiper": "^11.0.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
